imp - bkp - "Supressed?" Huh?
---

We've corrected the spelling of "suppressed" in the description of DND.

  - Backportable for 0.1.1
  - Backportable for 0.1.0

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: True
Part: 1/1

--- a/public/Nitrocid.Locales/Translations/eng.txt
+++ b/public/Nitrocid.Locales/Translations/eng.txt
@@ -2945,7 +2945,7 @@ Show the count of kernel addon commands when listing them in the help command
 Enable scroll bar in selection
 Enables the scroll bar in selection screens
 Do Not Disturb
-If Do Not Disturb is enabled, all notifications received will be supressed from the display. This means that you won't be able to see any notification to help you focus.
+If Do Not Disturb is enabled, all notifications received will be suppressed from the display. This means that you won't be able to see any notification to help you focus.
 Upper left corner character for general border
 Upper right corner character for general border
 Lower left corner character for general border
