--- a/public/Nitrocid/Resources/Languages/eng.json
+++ b/public/Nitrocid/Resources/Languages/eng.json
@@ -2949,7 +2949,7 @@
     "Enable scroll bar in selection",
     "Enables the scroll bar in selection screens",
     "Do Not Disturb",
-    "If Do Not Disturb is enabled, all notifications received will be supressed from the display. This means that you won't be able to see any notification to help you focus.",
+    "If Do Not Disturb is enabled, all notifications received will be suppressed from the display. This means that you won't be able to see any notification to help you focus.",
     "Upper left corner character for general border",
     "Upper right corner character for general border",
     "Lower left corner character for general border",
