--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,22 @@
-nitrocid-27 (3.1.27.0-0.1.2.0-1) noble; urgency=medium
+nitrocid-27 (3.1.27.48-0.1.2.0-1) noble; urgency=medium
 
-  * Placeholder changelogs
-
- -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sun, 5 Oct 2025 19:48:55 +0300
-
+  * Added new themes
+  * Added new screensavers
+  * Added new languages
+  * Added new commands
+  * Added new interactive TUIs
+  * Added SMultivar
+  * Added editable widgets in The Nitrocid Homepage
+  * Added Pomodoro Timer
+  * Added audio cues
+  * Added Arch Linux packaging and Windows Installer packaging
+  * Made the kernel more attractive
+  * Refactored some API functions
+  * Separated cultures from languages
+  * Improvements in shutdown sequence
+  * Themes now parse more quickly
+  * Consolidated locale tools to Nitrocid.Locales
+  * Removed modern debug look
+  * Removed filesystem mitigation for NTFS corruption and BSOD issues
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Mon, 24 Feb 2025 19:28:10 +0300
