--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.48-0.1.2.2-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Mon, 24 Mar 2025 10:42:13 +0300
+
 nitrocid-27 (3.1.27.48-0.1.2.1-1) noble; urgency=medium
 
   * General improvements
