--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-26 (3.0.26.60-0.1.1.34-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 29 Mar 2025 12:32:45 +0300
+
 nitrocid-26 (3.0.26.60-0.1.1.33-1) noble; urgency=medium
 
   * General improvements
