--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.48-0.1.2.3-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 29 Mar 2025 12:27:34 +0300
+
 nitrocid-27 (3.1.27.48-0.1.2.2-1) noble; urgency=medium
 
   * General improvements
