fin - Finalized changelogs
---

Type: fin
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-Nitrocid KS 0.1.0 Service Pack 3 is here! It brings the redesigned kernel, as well as new and improved features!
+Since the release of 0.1.0 Service Pack 3, we've made a new version that incorporates general improvements.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Check the [0.1.2 changelogs](https://github.com/Aptivi/Nitrocid/releases/tag/v0.1.2) for more info.
+- `[*]` General improvements
 
 Review the commit history if you want to get a deep insight about the changes.
 
