--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.458-0.1.0.41-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 29 Mar 2025 12:33:08 +0300
+
 nitrocid-25 (3.0.25.458-0.1.0.40-1) noble; urgency=medium
 
   * General improvements
