--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
-This is an emergency release of 0.1.2 that fixes a critical issue for Nitrocid Lite regarding configuration.
+This is an emergency release of 0.1.2 that fixes a critical issue for the file manager TUIs.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` Fixed configuration system crash upon encountering no icons addon in Nitrocid Lite
+- `[*]` Fixed crucial file manager TUIs getting stuck in empty folders
 
 Review the commit history if you want to get a deep insight about the changes.
 
