--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-26 (3.0.26.60-0.1.1.35.1-1) noble; urgency=medium
+
+  * Fixed build failure due to wrong NuGet.config generation
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 04 Apr 2025 20:10:02 +0300
+
 nitrocid-26 (3.0.26.60-0.1.1.35-1) noble; urgency=medium
 
   * Fixed crucial file manager TUIs getting stuck in empty folders
