--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-26 (3.0.26.60-0.1.1.36-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Tue, 15 Apr 2025 18:33:53 +0300
+
 nitrocid-26 (3.0.26.60-0.1.1.35.1-1) noble; urgency=medium
 
   * Fixed build failure due to wrong NuGet.config generation
