--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.48-0.1.2.6-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Tue, 15 Apr 2025 18:33:10 +0300
+
 nitrocid-27 (3.1.27.48-0.1.2.5.1-1) noble; urgency=medium
 
   * Fixed build failure due to wrong NuGet.config generation
