--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.48-0.1.2.7-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 18 Apr 2025 21:08:19 +0300
+
 nitrocid-27 (3.1.27.48-0.1.2.6-1) noble; urgency=medium
 
   * General improvements
