--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.458-0.1.0.44-1) noble; urgency=medium
+
+  * General improvements
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 18 Apr 2025 21:14:26 +0300
+
 nitrocid-25 (3.0.25.458-0.1.0.43-1) noble; urgency=medium
 
   * General improvements
