add - doc - Added product expiry info + locs
---

We have added the product expiry info feature from the Dates addon from
0.1.3, along with localizations.

---

Type: add
Breaking: False
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4190,6 +4190,19 @@
     "إعدادات الضبط المسبق للشل",
     "إخراج قائمة التغليف",
     "يلف إخراج القائمة إذا بدت طويلة جدًا بالنسبة لهندسة وحدة التحكم الحالية.",
-    "يتيح لك هذا القسم تكوين كيفية عمل وسائل التسلية."
+    "يتيح لك هذا القسم تكوين كيفية عمل وسائل التسلية.",
+    "تاريخ الإنتاج غير صحيح",
+    "فترة الصلاحية غير صحيحة",
+    "تاريخ الانتهاء غير صحيح",
+    "تاريخ الإنتاج",
+    "تاريخ الانتهاء",
+    "فترة الصلاحية",
+    "سلامة المنتج",
+    "حالة المنتج",
+    "فشل الحصول على معلومات انتهاء صلاحية المنتج",
+    "الحصول على معلومات انتهاء صلاحية المنتج",
+    "تاريخ الإنتاج (انظر إلى جانب المنتج أو أسفله)",
+    "تاريخ الانتهاء أو الفترة الزمنية (سواءً مكتوبة صراحةً في نفس المكان أو فترات زمنية، مثل 6 أشهر أو سنة واحدة)",
+    "هل المنتج المستهدف لا يحدد تاريخ انتهاء الصلاحية صراحةً؟"
   ]
 }
