--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4190,6 +4190,19 @@
     "Ké yù shè shèdìng",
     "bāozhuāng lièbiǎo shūchū",
     "rúguǒ qīngdān shūchū duìyú mùqián kòngzhì tái jǐhé lái shuō tài zhǎng, zé jiāng qí huànháng.",
-    "Cǐ bùfèn kě ràng nín pèizhì yúlè huódòng de gōngzuò fāngshì."
+    "Cǐ bùfèn kě ràng nín pèizhì yúlè huódòng de gōngzuò fāngshì.",
+    "Shēngchǎn rìqí wúxiào",
+    "dào qí shíduàn wúxiào",
+    "dào qí rì wúxiào",
+    "shēngchǎn rìqí",
+    "dào qí rì",
+    "dào qí shíjiān kuàdù",
+    "chǎnpǐn jiànkāng",
+    "chǎnpǐn zhuàngtài",
+    "wúfǎ qǔdé chǎnpǐn dào qí xìnxī",
+    "huòqǔ chǎnpǐn dào qí xìnxī",
+    "shēngchǎn rìqí (chákàn chǎnpǐn cèmiàn huò dǐbù)",
+    "dào qí rì huò shíduàn (míngquè xiě zài tóngyī wèizhì huò shíjiān kuàdù, lìrú 6 gè yuè huò 1 nián)",
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn"
   ]
 }
