--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4190,6 +4190,19 @@
     "Προκαθορισμένες ρυθμίσεις κελύφους",
     "Έξοδοι λίστας αναδίπλωσης",
     "Αναδιπλώνει τις εξόδους της λίστας εάν φαίνεται πολύ μεγάλη για την τρέχουσα γεωμετρία της κονσόλας.",
-    "Αυτή η ενότητα σάς επιτρέπει να διαμορφώσετε τον τρόπο λειτουργίας των ψυχαγωγικών."
+    "Αυτή η ενότητα σάς επιτρέπει να διαμορφώσετε τον τρόπο λειτουργίας των ψυχαγωγικών.",
+    "Η ημερομηνία παραγωγής δεν είναι έγκυρη",
+    "Η χρονική περίοδος λήξης δεν είναι έγκυρη",
+    "Η ημερομηνία λήξης δεν είναι έγκυρη",
+    "Ημερομηνία παραγωγής",
+    "Ημερομηνία λήξης",
+    "Χρονικό διάστημα λήξης",
+    "Υγεία προϊόντος",
+    "Κατάσταση προϊόντος",
+    "Αποτυχία λήψης πληροφοριών λήξης του προϊόντος",
+    "Λαμβάνει τις πληροφορίες λήξης του προϊόντος",
+    "Ημερομηνία παραγωγής (κοιτάξτε είτε στο πλάι είτε στο κάτω μέρος του προϊόντος)",
+    "Ημερομηνία ή χρονική περίοδος λήξης (είτε γράφεται ρητά στο ίδιο σημείο είτε χρονικά διαστήματα, όπως 6 μήνες ή 1 έτος)",
+    "Εάν το προϊόν-στόχος δεν προσδιορίζει ρητά την ημερομηνία λήξης"
   ]
 }
