--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4190,6 +4190,19 @@
     "shel preeset setings",
     "soochee aautaput lapeten",
     "yadi yah vartamaan kansol jyaamiti ke lie bahut lamba lagata hai to soochee aautaput ko lapetata hai.",
-    "yah anubhaag aapako yah konfigar karane deta hai ki manoranjan kaise kaam karate hain."
+    "yah anubhaag aapako yah konfigar karane deta hai ki manoranjan kaise kaam karate hain.",
+    "utpaadan tithi amaany hai",
+    "samaapti avadhi amaany hai",
+    "samaapti tithi amaany hai",
+    "utpaadan tithi",
+    "samaapti tithi",
+    "samaapti avadhi",
+    "utpaad svaasthy",
+    "utpaad sthiti",
+    "utpaad samaapti jaanakaaree praapt karane mein viphal",
+    "utpaad samaapti jaanakaaree praapt karata hai",
+    "utpaadan tithi (utpaad ke kinaare ya neeche dekhen)",
+    "samaapti tithi ya samay avadhi (ya to ek hee sthaan par ya samay avadhi mein spasht roop se likhee gaee hai, jaise ki 6 maheene ya 1 varsh)",
+    "kya lakshy utpaad samaapti tithi ko spasht roop se nirdisht nahin karata hai"
   ]
 }
