--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
@@ -4190,6 +4190,19 @@
     "Socruithe réamhshocraithe Shell",
     "Aschuir liosta fillte",
     "Wraps na haschuir liosta más cosúil go bhfuil sé ró-fhada do chéimseata reatha consól.",
-    "Ligeann an chuid seo duit conas a oibríonn na siamsaí a chumrú."
+    "Ligeann an chuid seo duit conas a oibríonn na siamsaí a chumrú.",
+    "Tá an dáta táirgthe neamhbhailí",
+    "Tá an tréimhse ama éaga neamhbhailí",
+    "Tá an dáta éaga neamhbhailí",
+    "Dáta táirgthe",
+    "Dáta éaga",
+    "Réise ama éaga",
+    "Sláinte táirge",
+    "Stádas an táirge",
+    "Theip ar fhaisnéis éaga an táirge a fháil",
+    "Faigheann sé faisnéis faoi dhul in éag an táirge",
+    "Dáta táirgthe (féach ar thaobh nó bun an táirge)",
+    "Dáta éaga nó tréimhse ama (scríofa go sainráite sa láthair chéanna nó sna tréimhsí ama céanna, amhail 6 mhí nó 1 bhliain)",
+    "Cibé nach sonraítear an dáta éaga go sainráite sa sprioctháirge"
   ]
 }
