--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4190,6 +4190,19 @@
     "シェルのプリセット設定",
     "リスト出力を折り返す",
     "現在のコンソール ジオメトリに対してリスト出力が長すぎると思われる場合は、リスト出力を折り返します。",
-    "このセクションでは、アミューズメントの動作を構成できます。"
+    "このセクションでは、アミューズメントの動作を構成できます。",
+    "製造日が無効です",
+    "有効期限が無効です",
+    "有効期限が無効です",
+    "製造日",
+    "有効期限",
+    "有効期限の範囲",
+    "製品の健全性",
+    "製品のステータス",
+    "製品の有効期限情報の取得に失敗しました",
+    "製品の有効期限情報を取得します",
+    "製造日（製品の側面または底面をご覧ください）",
+    "有効期限または期間（同じ場所に明示的に記載されているか、6か月や1年などの期間が記載されているか）",
+    "対象製品に有効期限が明示的に指定されていないかどうか"
   ]
 }
