--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
@@ -4190,6 +4190,19 @@
     "Shell yù shè shèzhì",
     "bāozhuāng lièbiǎo shūchū",
     "rúguǒ lièbiǎo shūchū duìyú dāngqián kòngzhì tái jǐhé jiégòu lái shuō tài zhǎng, zé bāozhuāng lièbiǎo shūchū.",
-    "Běn jié yǔnxǔ nín pèizhì yúlè de gōngzuò fāngshì."
+    "Běn jié yǔnxǔ nín pèizhì yúlè de gōngzuò fāngshì.",
+    "Shēngchǎn rìqí wúxiào",
+    "bǎozhìqī wúxiào",
+    "bǎozhìqī wúxiào",
+    "shēngchǎn rìqí",
+    "bǎozhìqī",
+    "bǎozhìqī kuàdù",
+    "chǎnpǐn jiànkāng zhuàngkuàng",
+    "chǎnpǐn zhuàngtài",
+    "huòqǔ chǎnpǐn bǎozhìqī xìnxī shībài",
+    "huòqǔ chǎnpǐn bǎozhìqī xìnxī",
+    "shēngchǎn rìqí (qǐng chákàn chǎnpǐn cèmiàn huò dǐbù)",
+    "bǎozhìqī huò kuàdù (míngquè xiě zài tóngyī wèizhì huò shíjiān duàn, lìrú 6 gè yuè huò 1 nián)",
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng bǎozhìqī"
   ]
 }
