--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
@@ -4190,6 +4190,19 @@
     "殼預設設定",
     "包裝列表輸出",
     "如果清單輸出對於目前控制台幾何來說太長，則將其換行。",
-    "此部分可讓您配置娛樂活動的工作方式。"
+    "此部分可讓您配置娛樂活動的工作方式。",
+    "生產日期無效",
+    "到期時段無效",
+    "到期日無效",
+    "生產日期",
+    "到期日",
+    "到期時間跨度",
+    "產品健康",
+    "產品狀態",
+    "無法取得產品到期信息",
+    "獲取產品到期信息",
+    "生產日期（查看產品側面或底部）",
+    "到期日或時段（明確寫在同一位置或時間跨度，例如 6 個月或 1 年）",
+    "目標產品是否未明確指定有效期限"
   ]
 }
