--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/mal.json
@@ -4190,6 +4190,19 @@
     "Tetapan pratetap Shell",
     "Balut keluaran senarai",
     "Membungkus keluaran senarai jika kelihatan terlalu panjang untuk geometri konsol semasa.",
-    "Bahagian ini membolehkan anda mengkonfigurasi cara hiburan berfungsi."
+    "Bahagian ini membolehkan anda mengkonfigurasi cara hiburan berfungsi.",
+    "Tarikh pengeluaran tidak sah",
+    "Tempoh masa tamat adalah tidak sah",
+    "Tarikh luput tidak sah",
+    "Tarikh pengeluaran",
+    "tarikh luput",
+    "Jangka masa tamat tempoh",
+    "Kesihatan produk",
+    "Status produk",
+    "Gagal mendapatkan maklumat tamat tempoh produk",
+    "Mendapat maklumat tamat tempoh produk",
+    "Tarikh pengeluaran (lihat sama ada sisi atau bahagian bawah produk)",
+    "Tarikh luput atau tempoh masa (sama ada ditulis secara eksplisit pada tempat atau jangka masa yang sama, seperti 6 bulan atau 1 tahun)",
+    "Sama ada produk sasaran tidak menyatakan tarikh luput dengan jelas"
   ]
 }
