--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/nor.json
@@ -4190,6 +4190,19 @@
     "Shell forhåndsinnstilte innstillinger",
     "Wrap liste utganger",
     "Omslutter listeutdataene hvis den virker for lang for gjeldende konsollgeometri.",
-    "Denne delen lar deg konfigurere hvordan fornøyelsene fungerer."
+    "Denne delen lar deg konfigurere hvordan fornøyelsene fungerer.",
+    "Produksjonsdatoen er ugyldig",
+    "Utløpsperioden er ugyldig",
+    "Utløpsdatoen er ugyldig",
+    "Produksjonsdato",
+    "Utløpsdato",
+    "Utløpstid",
+    "Produkthelse",
+    "Produktstatus",
+    "Kunne ikke hente informasjon om produktutløp",
+    "Får informasjon om produktets utløpsdato",
+    "Produksjonsdato (se enten på siden eller bunnen av produktet)",
+    "Utløpsdato eller tidsperiode (enten eksplisitt skrevet på samme sted eller tidsrom, for eksempel 6 måneder eller 1 år)",
+    "Om målproduktet ikke spesifiserer utløpsdatoen eksplisitt"
   ]
 }
