add - doc - Added product expiry info + locs
---

We have added the product expiry info feature from the Dates addon from
0.1.3, along with localizations.

---

Type: add
Breaking: False
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
@@ -4412,6 +4412,19 @@
     "第三個藍色最高等級",
     "第三個最大顏色級別",
     "如果啟用，進度將選擇隨機顏色。否則，請使用配置中的顏色。",
-    "如果啟用了顏色循環，那麼在進度中需要多少個刻度才能改變顏色？ 1 刻 = 0.5 秒"
+    "如果啟用了顏色循環，那麼在進度中需要多少個刻度才能改變顏色？ 1 刻 = 0.5 秒",
+    "生產日期無效",
+    "到期時段無效",
+    "到期日無效",
+    "生產日期",
+    "到期日",
+    "到期時間跨度",
+    "產品健康",
+    "產品狀態",
+    "無法取得產品到期信息",
+    "獲取產品到期信息",
+    "生產日期（查看產品側面或底部）",
+    "到期日或時段（明確寫在同一位置或時間跨度，例如 6 個月或 1 年）",
+    "目標產品是否未明確指定有效期限"
   ]
 }
