--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4412,6 +4412,19 @@
     "dì sān gè lán sè zuìgāo děngjí",
     "dì sān gè zuìdà yánsè jí bié",
     "rúguǒ qǐyòng, jìndù jiāng xuǎnzé suíjī yánsè. Fǒuzé, qǐng shǐyòng pèizhì zhōng de yánsè.",
-    "Rúguǒ qǐyòngle yánsè xúnhuán, nàme zài jìndù zhòng xūyào duōshǎo gè kèdù cáinéng gǎibiàn yánsè? 1 Kè = 0.5 Miǎo"
+    "Rúguǒ qǐyòngle yánsè xúnhuán, nàme zài jìndù zhòng xūyào duōshǎo gè kèdù cáinéng gǎibiàn yánsè? 1 Kè = 0.5 Miǎo",
+    "Shēngchǎn rìqí wúxiào",
+    "dào qí shíduàn wúxiào",
+    "dào qí rì wúxiào",
+    "shēngchǎn rìqí",
+    "dào qí rì",
+    "dào qí shíjiān kuàdù",
+    "chǎnpǐn jiànkāng",
+    "chǎnpǐn zhuàngtài",
+    "wúfǎ qǔdé chǎnpǐn dào qí xìnxī",
+    "huòqǔ chǎnpǐn dào qí xìnxī",
+    "shēngchǎn rìqí (chákàn chǎnpǐn cèmiàn huò dǐbù)",
+    "dào qí rì huò shíduàn (míngquè xiě zài tóngyī wèizhì huò shíjiān kuàdù, lìrú 6 gè yuè huò 1 nián)",
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn"
   ]
 }
