--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
@@ -4412,6 +4412,19 @@
     "Maximales Blau-Farbniveau für dritte",
     "Maximales Farbniveau für dritte",
     "Progresses wählt zufällige Farben aus, wenn es aktiviert ist. Andernfalls verwenden Sie Farben aus der Konfiguration.",
-    "Wenn Farbwechsel aktiviert ist, wie viele Ticks vergehen, bevor die Farben in Progresses geändert werden? 1 Tick = 0,5 Drittel"
+    "Wenn Farbwechsel aktiviert ist, wie viele Ticks vergehen, bevor die Farben in Progresses geändert werden? 1 Tick = 0,5 Drittel",
+    "Ungültiges Produktionsdatum",
+    "Ungültiger Ablaufzeitraum",
+    "Ungültiges Ablaufdatum",
+    "Produktionsdatum",
+    "Ablaufdatum",
+    "Ablaufzeitraum",
+    "Produktzustand",
+    "Produktstatus",
+    "Produktablaufinformationen konnten nicht abgerufen werden",
+    "Ablaufinformationen werden abgerufen",
+    "Produktionsdatum (siehe Seite oder Unterseite des Produkts)",
+    "Ablaufdatum oder -zeitraum (entweder explizit an derselben Stelle angegeben oder Zeitspannen, z. B. 6 Monate oder 1 Jahr)",
+    "Ob das Zielprodukt das Ablaufdatum nicht explizit angibt"
   ]
 }
