--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
@@ -4412,6 +4412,19 @@
     "Uasleibhéal dath gorm don tríú",
     "Uasleibhéal datha don tríú",
     "Roghnóidh Progresses dathanna randamacha má tá sé cumasaithe. Seachas sin, bain úsáid as dathanna ó config.",
-    "Má tá rothaíocht dathanna cumasaithe, cé mhéad tic sula n-athraítear dathanna in Progresses? 1 tic = 0.5 sa tríú háit"
+    "Má tá rothaíocht dathanna cumasaithe, cé mhéad tic sula n-athraítear dathanna in Progresses? 1 tic = 0.5 sa tríú háit",
+    "Tá an dáta táirgthe neamhbhailí",
+    "Tá an tréimhse ama éaga neamhbhailí",
+    "Tá an dáta éaga neamhbhailí",
+    "Dáta táirgthe",
+    "Dáta éaga",
+    "Réise ama éaga",
+    "Sláinte táirge",
+    "Stádas an táirge",
+    "Theip ar fhaisnéis éaga an táirge a fháil",
+    "Faigheann sé faisnéis faoi dhul in éag an táirge",
+    "Dáta táirgthe (féach ar thaobh nó bun an táirge)",
+    "Dáta éaga nó tréimhse ama (scríofa go sainráite sa láthair chéanna nó sna tréimhsí ama céanna, amhail 6 mhí nó 1 bhliain)",
+    "Cibé nach sonraítear an dáta éaga go sainráite sa sprioctháirge"
   ]
 }
