--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/kor.json
@@ -4412,6 +4412,19 @@
     "se beonjjaeui choedae palansaeg saegsang lebel",
     "se beonjjaeui choedae saegsang lebel",
     "Progressesga hwalseonghwadoen gyeong-u mujag-wi saegsang-eul seontaeghabnida. geuleohji anh-eumyeon config-ui saegsang-eul sayonghabnida.",
-    "saegsang sunhwan-i hwalseonghwadoen gyeong-u Progresses-eseo saegsang-eul byeongyeonghagi jeon-e myeoch tig-i pil-yohabnikka? 1tig = 0.5se beonjjae"
+    "saegsang sunhwan-i hwalseonghwadoen gyeong-u Progresses-eseo saegsang-eul byeongyeonghagi jeon-e myeoch tig-i pil-yohabnikka? 1tig = 0.5se beonjjae",
+    "saengsan naljjaga jalmosdoeeossseubnida.",
+    "yutong gigan-i jalmosdoeeossseubnida.",
+    "yutong naljjaga jalmosdoeeossseubnida.",
+    "saengsan naljja",
+    "yutong naljja",
+    "yutong gigan",
+    "jepum sangtae",
+    "jepum sangtae",
+    "jepum yutong gihan jeongboleul gajyeooji moshaessseubnida.",
+    "jepum yutong gihan jeongboleul gajyeoobnida.",
+    "saengsan naljja(jepum cheugmyeon ttoneun hadan chamjo)",
+    "yutong gihan ttoneun gigan(gat-eun wichie myeongsijeog-eulo gijae ttoneun 6gaewol ttoneun 1nyeongwa gat-eun gigan)",
+    "daesang jepum-i yutong gihan-eul myeongsijeog-eulo jijeonghaji anhneunji yeobu"
   ]
 }
