--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4412,6 +4412,19 @@
     "Maximum caeruleum colorem tertium",
     "Maximum colorem gradu tertio",
     "Progressiones temere colores eligent si idoneus est. Alioquin colore config uti.",
-    "Si color cyclus efficitur, quot ricini ante mutantur colores in progressionibus? 1 ricinum = 0.5 tertium"
+    "Si color cyclus efficitur, quot ricini ante mutantur colores in progressionibus? 1 ricinum = 0.5 tertium",
+    "Productio date invalidum",
+    "Exitus tempus invalidum est",
+    "Exitus diem invalidum est",
+    "Productio diem",
+    "Exitus diem",
+    "Exitus temporis spatium",
+    "Product sanitas",
+    "Product status",
+    "Defecit ut productum exire notitia",
+    "Exitus ad productum accipit notitia",
+    "Productio date (vide vel latus vel imum producti)",
+    "Dies elapsus vel temporis periodus (vel expresse scriptus in eodem loco vel spatio temporis, ut 6 menses vel 1 annus)",
+    "Utrum scopum productum non dat terminum expresse"
   ]
 }
