--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
@@ -4412,6 +4412,19 @@
     "Üçüncü için maksimum mavi renk seviyesi",
     "Üçüncü için maksimum renk seviyesi",
     "Progresses, etkinleştirilirse rastgele renkler seçecektir. Aksi takdirde, yapılandırmadaki renkleri kullanın.",
-    "Renk döngüsü etkinleştirilirse, Progresses'ta renkleri değiştirmeden önce kaç tik var? 1 tik = 0,5 üçüncü"
+    "Renk döngüsü etkinleştirilirse, Progresses'ta renkleri değiştirmeden önce kaç tik var? 1 tik = 0,5 üçüncü",
+    "Üretim tarihi geçersiz",
+    "Son kullanma tarihi geçersiz",
+    "Son kullanma tarihi geçersiz",
+    "Üretim tarihi",
+    "Son kullanma tarihi",
+    "Son kullanma süresi aralığı",
+    "Ürün sağlığı",
+    "Ürün durumu",
+    "Ürün son kullanma bilgisi alınamadı",
+    "Ürün son kullanma bilgilerini alır",
+    "Üretim tarihi (ürünün yan tarafına veya altına bakın)",
+    "Son kullanma tarihi veya zaman aralığı (aynı yerde açıkça yazılmış veya 6 ay veya 1 yıl gibi zaman aralıkları)",
+    "Hedef ürünün son kullanma tarihini açıkça belirtip belirtmediği"
   ]
 }
