--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4412,6 +4412,19 @@
     "Максимальний рівень синього кольору для третього",
     "Максимальний рівень кольору для третього",
     "Прогрес вибере випадкові кольори, якщо це ввімкнено. В іншому випадку використовуйте кольори з конфігурації.",
-    "Якщо зміну кольорів увімкнено, скільки позначок перед зміною кольорів у прогресі? 1 тик = 0,5 третини"
+    "Якщо зміну кольорів увімкнено, скільки позначок перед зміною кольорів у прогресі? 1 тик = 0,5 третини",
+    "Дата виробництва недійсна",
+    "Термін дії недійсний",
+    "Термін придатності недійсний",
+    "Дата виробництва",
+    "Термін придатності",
+    "Термін придатності",
+    "Здоров'я продукту",
+    "Статус товару",
+    "Не вдалося отримати інформацію про термін придатності продукту",
+    "Отримує інформацію про термін придатності продукту",
+    "Дата виробництва (дивіться або збоку, або знизу виробу)",
+    "Термін придатності або період часу (або чітко вказано в тому самому місці, або проміжки часу, наприклад 6 місяців або 1 рік)",
+    "Чи в цільовому продукті не вказано чітко термін придатності"
   ]
 }
