--- a/public/Nitrocid/Resources/Languages/eng.json
+++ b/public/Nitrocid/Resources/Languages/eng.json
@@ -4412,6 +4412,19 @@
     "Maximum blue color level for third",
     "Maximum color level for third",
     "Progresses will select random colors if it's enabled. Otherwise, use colors from config.",
-    "If color cycling is enabled, how many ticks before changing colors in Progresses? 1 tick = 0.5 third"
+    "If color cycling is enabled, how many ticks before changing colors in Progresses? 1 tick = 0.5 third",
+    "Production date is invalid",
+    "Expiry time period is invalid",
+    "Expiry date is invalid",
+    "Production date",
+    "Expiry date",
+    "Expiry time span",
+    "Product health",
+    "Product status",
+    "Failed to get product expiry information",
+    "Gets the product expiry information",
+    "Production date (look at either the side or the bottom of the product)",
+    "Expiry date or time period (either explicitly written in the same spot or time spans, such as 6 months or 1 year)",
+    "Whether the target product doesn't specify the expiry date explicitly"
   ]
 }
