--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4412,6 +4412,19 @@
     "第三栏的最大蓝色级别",
     "第三栏的最大颜色级别",
     "如果启用，进度将选择随机颜色。否则，使用配置中的颜色。",
-    "如果启用了颜色循环，进度中更改颜色前需要多少个刻度？1 刻度 = 0.5 秒"
+    "如果启用了颜色循环，进度中更改颜色前需要多少个刻度？1 刻度 = 0.5 秒",
+    "生产日期无效",
+    "保质期无效",
+    "保质期无效",
+    "生产日期",
+    "保质期",
+    "保质期跨度",
+    "产品健康状况",
+    "产品状态",
+    "获取产品保质期信息失败",
+    "获取产品保质期信息",
+    "生产日期（请查看产品侧面或底部）",
+    "保质期或跨度（明确写在同一位置或时间段，例如 6 个月或 1 年）",
+    "目标产品是否未明确指定保质期"
   ]
 }
