--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/dtc.json
@@ -4412,6 +4412,19 @@
     "Maximum blauw kleurniveau voor derde",
     "Maximum kleurniveau voor derde",
     "Progresses selecteert willekeurige kleuren als dit is ingeschakeld. Gebruik anders kleuren uit config.",
-    "Als kleurcyclus is ingeschakeld, hoeveel ticks voordat kleuren worden gewijzigd in Progresses? 1 tick = 0,5 derde"
+    "Als kleurcyclus is ingeschakeld, hoeveel ticks voordat kleuren worden gewijzigd in Progresses? 1 tick = 0,5 derde",
+    "Productiedatum is ongeldig",
+    "Vervaldatum is ongeldig",
+    "Vervaldatum is ongeldig",
+    "Productiedatum",
+    "Vervaldatum",
+    "Vervalperiode",
+    "Productstatus",
+    "Productstatus",
+    "Kan de vervaldatum van het product niet ophalen",
+    "Verkrijgt de vervaldatum van het product",
+    "Productdatum (kijk naar de zijkant of onderkant van het product)",
+    "Vervaldatum of -periode (expliciet op dezelfde plek geschreven of tijdsperioden, zoals 6 maanden of 1 jaar)",
+    "Of het doelproduct de vervaldatum niet expliciet vermeldt"
   ]
 }
