--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4412,6 +4412,19 @@
     "Μέγιστο επίπεδο μπλε χρώματος για το τρίτο",
     "Μέγιστο επίπεδο χρώματος για το τρίτο",
     "Το Progresses θα επιλέξει τυχαία χρώματα εάν είναι ενεργοποιημένο. Διαφορετικά, χρησιμοποιήστε χρώματα από τη διαμόρφωση.",
-    "Εάν είναι ενεργοποιημένος ο κύκλος χρωμάτων, πόσα σημάδια προτού αλλάξετε χρώματα στο Progresses; 1 τικ = 0,5 τρίτο"
+    "Εάν είναι ενεργοποιημένος ο κύκλος χρωμάτων, πόσα σημάδια προτού αλλάξετε χρώματα στο Progresses; 1 τικ = 0,5 τρίτο",
+    "Η ημερομηνία παραγωγής δεν είναι έγκυρη",
+    "Η χρονική περίοδος λήξης δεν είναι έγκυρη",
+    "Η ημερομηνία λήξης δεν είναι έγκυρη",
+    "Ημερομηνία παραγωγής",
+    "Ημερομηνία λήξης",
+    "Χρονικό διάστημα λήξης",
+    "Υγεία προϊόντος",
+    "Κατάσταση προϊόντος",
+    "Αποτυχία λήψης πληροφοριών λήξης του προϊόντος",
+    "Λαμβάνει τις πληροφορίες λήξης του προϊόντος",
+    "Ημερομηνία παραγωγής (κοιτάξτε είτε στο πλάι είτε στο κάτω μέρος του προϊόντος)",
+    "Ημερομηνία ή χρονική περίοδος λήξης (είτε γράφεται ρητά στο ίδιο σημείο είτε χρονικά διαστήματα, όπως 6 μήνες ή 1 έτος)",
+    "Εάν το προϊόν-στόχος δεν προσδιορίζει ρητά την ημερομηνία λήξης"
   ]
 }
