--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4412,6 +4412,19 @@
     "teesaree pattee ke lie adhikatam neela rang star",
     "teesaree pattee ke lie adhikatam rang star",
     "yadi yah saksham hai to pragati yaadrchchhik rangon ka chayan karegee. anyatha, konfigareshan se rangon ka upayog karen.",
-    "yadi rang saikaling saksham hai, to pragati mein rang badalane se pahale kitane tik hain? 1 tik = 0.5 teesaree"
+    "yadi rang saikaling saksham hai, to pragati mein rang badalane se pahale kitane tik hain? 1 tik = 0.5 teesaree",
+    "utpaadan tithi amaany hai",
+    "samaapti avadhi amaany hai",
+    "samaapti tithi amaany hai",
+    "utpaadan tithi",
+    "samaapti tithi",
+    "samaapti avadhi",
+    "utpaad svaasthy",
+    "utpaad sthiti",
+    "utpaad samaapti jaanakaaree praapt karane mein viphal",
+    "utpaad samaapti jaanakaaree praapt karata hai",
+    "utpaadan tithi (utpaad ke kinaare ya neeche dekhen)",
+    "samaapti tithi ya samay avadhi (ya to ek hee sthaan par ya samay avadhi mein spasht roop se likhee gaee hai, jaise ki 6 maheene ya 1 varsh)",
+    "kya lakshy utpaad samaapti tithi ko spasht roop se nirdisht nahin karata hai"
   ]
 }
