--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,11 @@
-Since the release of 0.1.2, we've made a new version that incorporates general improvements.
+This is the first (and the small) service pack of 0.1.2 that adds a small feature and an upgrade to the latest version of Terminaux.
 
 ### Changes
 
 This release contains a variety of changes, including, but not limited to:
 
-- `[*]` General improvements
+- `[+]` Added a feature from 0.1.3 (guess what...)
+- `[*]` Updated Terminaux
 
 Review the commit history if you want to get a deep insight about the changes.
 
